# HelloSmartAss

./: README.md
GRPC/c++_client/: CMakeLists.txt  client.cpp
GRPC/go_server/: go.mod  go.sum  server.go
